Terraform-VPC/modules/sg/main.tf
resource "aws_security_group" "sg" {
  name        = "sg"
  description = "Allow http, ssh inbound traffic and all outbound traffic"
  vpc_id      = var.vpc_id

  ingress {
        description      = "Allow HTTP traffic from VPC CIDR"
        from_port        = 80
        to_port          = 80
        protocol         = "tcp"
        cidr_blocks      = ["0.0.0.0/0"]
    }

    ingress {
        description      = "Allow SSH traffic from VPC CIDR"
        from_port        = 22
        to_port          = 22
        protocol         = "tcp"
        cidr_blocks      = ["0.0.0.0/0"]
    }

    egress {
        description      = "Allow all outbound traffic"
        from_port        = 0
        to_port          = 0
        protocol         = "-1"
        cidr_blocks      = ["0.0.0.0/0"]
    }

    tags = {
        Name = "my-sg"
    }
}
